--- a/css/index.css
+++ b/css/index.css
@@ -1,231 +1,3 @@
-*
-{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-html
-{
-    scroll-behavior: smooth;
-}
-button:hover,a:hover
-{
-    transition: 0.5s;
-}
-body
-{
-    font-family: 'Open Sans', sans-serif;
-    color:#4a4c4e;
-    letter-spacing: 0.5px;
-}
-h1,h2,h3,h4,h5,h6
-{
-    letter-spacing: 1.2px;
-}
-img
-{
-    max-width: 100%;
-    height: auto;
-    position: relative;
-}
-a
-{
-    text-decoration: none;
-}
-.top
-{
-    font-size: 12px;
-    font-weight: bold;
-    position: sticky;
-    top:0;
-    z-index: 999;
-}
-.top ul
-{
-    list-style-type: none;
-}
-.top a
-{
-    color: #ffffff;
-}
-.top1
-{
-    background-color: #202226;
-    color: #fff;
-    display: flex;
-    justify-content: flex-end;
-    padding: 5px;
-}
-.top1 ul
-{
-    display: flex;
-    margin-right: 20px;
-}
-.top1 ul li
-{
-    padding: 5px 24px;
-    padding-right: 0;
-}
-.social
-{
-    font-size: 16px;
-}
-.top a:hover,.post-day a:hover,.blog-info h2:hover>a
-{
-    color:#ff4229;
-}
-.top2
-{
-    background-color: rgba(255, 255,255, 0.9);
-    display: flex;
-    align-items: center;
-}
-.top2 a
-{
-    color:#5B6266;
-}
-.nav>ul>li li>a
-{
-    color: white;
-}
-.top2 .nav>ul
-{
-    display: flex;
-    justify-content: flex-end;
-}
-.top2 .nav>ul>li
-{
-    padding: 30px 20px;
-}
-.nav>ul ul
-{
-    display: none;
-}
-.bar-ul
-{
-    height: 2px;
-    width: 15px;
-    margin-left: 18px;
-    background-color: #5B6266;
-}
-.nav>ul>li ul
-{
-    background-color: #000000;
-    color: #fff;
-}
-.nav>ul>li ul>li
-{
-    padding:20px 18px 15px 18px;
-}
-.nav>ul>li:hover>ul
-{
-    display: block;
-    position: absolute;
-    margin-top:15px;
-    margin-right: 20px;
-    margin-left: -20px;
-    animation-name: hieu_ung_menu,opacity;
-    animation-duration: 1s;
-}
-.nav>ul>li li
-{
-	position:relative;
-}
-.nav>ul>li li:hover>ul
-{
-    display:block;
-    width: 100%;
-	position:absolute;
-	top:0;
-    left:100%;
-    animation-name: hieu_ung_menu,opacity;
-    animation-duration: 1s;
-}
-@keyframes hieu_ung_menu
-{
-    from
-    {
-        max-height: 0vh;
-    }
-    to
-    {
-        max-height: 100vh;
-    }
-}
-@keyframes opacity
-{
-    from 
-    {
-        opacity: 0;
-    } 
-    to 
-    {
-        opacity: 1;
-    }
-}
-.logo
-{
-    width: 10%;
-    padding: 10px 40px 0 20px;
-}
-.nav
-{
-    width: 90%;
-}
-.sildeshow
-{
-    padding: 0 20px;
-}
-#back-top a
-{
-    position: fixed;
-    bottom: 12px;
-    right: 24px;
-    color: #eee;
-    font-size: 50px;
-    font-weight: bold;
-    z-index: 9999;
-}
-#back-top a:hover {
-    color: rgba(50,50,50,0.8);
-}
-.slick-dots 
-{
-    bottom:30px;
-}
-
-.slick-dots li button:before
-{
-    font-size: 16px;
-    color:#E5E5E5;
-}
-.slick-dots li.slick-active button:before 
-{
-    color: #ffffff;
-}
-.fa-chevron-left:before,.fa-chevron-right:before
-{
-    font-size: 50px;
-    position: absolute;
-    z-index: 2;
-    top:50%;
-    transform: translate(0%,-50%);
-    color: rgb(255, 255, 255); 
-}
-.fa-chevron-left:before
-{
-    left: 5%;
-    transform: translate(-50%,0);
-}
-.fa-chevron-right:before
-{
-    right: 5%;
-    transform: translate(+50%,0);
-}
-.sildeshow i:hover
-{
-    cursor: pointer;
-}
 .sv-row
 {
     display: flex;
@@ -370,13 +142,10 @@ h1
 .button-box
 {
     display: flex;
-    width: 30%;
-    margin: 0 auto;
-    justify-content: space-between;
+    justify-content: center;
 }
 .button-menu button
 {
-    width: 30%;
     border: 2px solid #F4F4F4;
     background-color: #ffffff;
     color: #aaaaaa;
@@ -401,7 +170,28 @@ button
     border: none;
     outline: none;
 }
-#starters,#brunch,.drink-container,.evt-container,.team-container,.contact-container
+#starters,.drink-container
+{
+    display: grid;
+    grid-template-columns: 30% auto auto;
+    grid-template-rows: auto auto;
+    grid-gap: 25px;
+}
+#starters>div,.drink-container>div
+{
+    width: 100%;
+    height: 100%;
+}
+#starters div:first-child,.drink-container div:first-child
+{
+
+     grid-row: 1/3; 
+}
+#starters div:nth-child(2),.drink-container div:nth-child(2)
+{
+    grid-column: 2/4;
+}
+#brunch,.evt-container,.team-container,.contact-container
 {
     display: flex;
 }
@@ -423,6 +213,10 @@ button
     line-height: 40px;
     color:#303033;
     font-weight: 600;
+}
+#starters .feature-food
+{
+    margin:0 !important;
 }
 .feature-food
 {
@@ -457,7 +251,7 @@ sup
     font-size: 13px;
     line-height: 24px;
     letter-spacing: 0.4px;
-    padding-right: 50px;
+    width: 80%;
 }
 .f-right 
 {
@@ -467,11 +261,23 @@ sup
     font-size: 14px;
     font-style: italic;
 }
+#starters
+{
+    flex-wrap: wrap;
+}
 .other 
 {
     width: calc(100% - 33.33%);
     display: flex;
     flex-wrap: wrap;
+}
+#starters .other>div
+{
+    width: 100%;
+}
+#starters>.other>div:nth-child(2)>div
+{
+    width: 50%;
 }
 .o1 
 {
@@ -481,7 +287,6 @@ sup
 .o2 
 {
     width :50%;
-    padding: 25px;
 }
 .feature2
 {
@@ -579,10 +384,7 @@ sup
 .chefs-bg .container
 {
     width: 50%;
-    position: absolute;
-    top:50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
+    margin: 0 auto;
 }
 .chefs-bg .container>h2
 {
@@ -650,6 +452,7 @@ sup
 {
     width: 31%;
     background-color: #ffffff;
+    margin-bottom: 40px;
 }
 .blog-item .img-box 
 {
@@ -734,6 +537,59 @@ sup
 {
     width: 25%;
     margin: 1%;
+    margin-bottom: 100px;
+}
+.gallery-item
+{
+    position: relative;
+}
+.cover
+{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0, 0, 0,0.5);
+    z-index: 997;
+    display: none;
+    animation:hieu_ung_menu 0.4s;
+    animation: opacity 0.4s;
+}
+.gallery-title
+{
+    text-align: center;
+    text-transform: uppercase;
+    color: #ffffff;
+    padding-top: 115px;
+    font-size: 18px;
+    font-weight: 600;
+    letter-spacing: 5.2px;
+    animation: gallery-title 0.4s;
+}
+.cover span
+{
+    display: block;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    margin: 20px 0;
+    animation: opacity 3s;
+    display: none;
+    animation: opacity 2s;
+}
+.cover span i
+{
+    color: #ffffff;
+    padding: 10px;
+    border: 2px solid #ffffff;
+}
+@keyframes gallery-title
+{
+    from{transform: translateY(-150px)}
+    to{transform: translateY(0px)}
+}
+.gallery-item:hover .cover,.gallery-item:hover .cover span
+{
+    display: block;
 }
 #gallery .s-button a
 {
@@ -885,6 +741,7 @@ sup
 }
 .hours-container,.contact-container
 {
+    padding-top: 50px;
     padding-bottom: 50px;
 }
 .contact-item
@@ -933,9 +790,14 @@ sup
 {
     color: #aaa;
 }
- .contact-item:nth-child(2)
+.contact-item:nth-child(2)
 {
-    height: auto;
+    padding: 0;
+}
+ .contact-img
+{
+    width: 100%;
+    height: 100%;
     background: url("../img/contact/bread.jpg");
     background-repeat: no-repeat;
     background-size: cover;
@@ -957,10 +819,6 @@ textarea
 {
     margin: 20px 0;
 }
-input:focus,textarea:focus
-{
-    outline: none;
-}
 input[type="submit"]
 {
     border: 2px solid #fff;
@@ -968,39 +826,4 @@ input[type="submit"]
     color: #fff;
     background-color: transparent;
     cursor: pointer;
-}
-#footer
-{
-    color: #bbb;
-    padding: 72px 48px 48px;
-    overflow: hidden;
-    clear: none;
-    position: relative;
-    margin-top: 17px;
-    text-align: center;
-}
-.ft-social ul
-{
-    display:flex;
-    width: 100%;
-    justify-content: center;
-    margin-bottom: 30px;
-}
-.ft-social li
-{
-    width: 5%;
-    list-style: none;
-    font-size: 30px;
-}
-.ft-social li>a
-{
-    color: #ccc;
-}
-.ft-social li>a:hover
-{
-    color: #ff4229;
-}
-.ft-copy
-{
-    font-size: 13px;
 }
