--- a/css/index.css
+++ b/css/index.css
@@ -47,9 +47,7 @@
 }
 .welcome .container
 {
-    width: 80%;
-    margin:0 auto;
-    padding-bottom: 20px;
+    padding: 30px;
 }
 .welcome .container
 {
@@ -110,12 +108,6 @@
 {
     background-color: #A8A8A8;
 }
-.menu 
-{
-    width: 90%;
-    margin:0 auto;
-}
-
 .intro
 {
     padding-top: 100px;
@@ -295,7 +287,7 @@ sup
     color: #ccc;
     text-align: center;
 }
-.feature2 h2,.drink .food-item h2
+.feature2 h2,.drink h2.food-item h2
 {
     border-top: 4px solid #ffffff;
     border-bottom: 4px solid #ffffff !important;
@@ -372,8 +364,6 @@ sup
 }
 .chefs-bg
 {
-    width: 100vw;
-    height: 100vh;
     background: url("../img/menu/kitchen.jpg");
     background-repeat: no-repeat;
     background-size: cover;
@@ -385,6 +375,7 @@ sup
 {
     width: 50%;
     margin: 0 auto;
+    padding-bottom: 100px;
 }
 .chefs-bg .container>h2
 {
@@ -453,20 +444,32 @@ sup
     width: 31%;
     background-color: #ffffff;
     margin-bottom: 40px;
+    position: relative;
 }
-.blog-item .img-box 
+.blog-item .img-box
 {
-    height: auto;
+    background-position: center center !important;
+    background-repeat: no-repeat !important;
+    background-size: cover !important;
+    height: 30vh;
 }
-.blog-item .img-box img
+.blog-item:first-child .img-box
 {
-    vertical-align: text-top;
+    background: url(../img/blog/scallops_s-630x400.jpg);
+}
+.blog-item:nth-child(2) .img-box
+{
+    background: url(../img/blog/coconut-577x400.jpg);
+}
+.blog-item:last-child .img-box
+{
+    background: url(../img/blog/springrolls_s-1-630x400.jpg);
 }
 .blog-info
 {
-    padding: 20px;
+    padding: 0 20px;
     padding-bottom: 50px;
-    position: relative;
+    margin-top:30px;
 }
 .blog-item h2 a,.blog-info>a,.evt-info>a
 {
@@ -827,3 +830,13 @@ input[type="submit"]
     background-color: transparent;
     cursor: pointer;
 }
+.noti 
+{
+    display: none;
+    margin: 10px 0;
+    border: 2px solid #F7E700;
+    padding: 5px;
+    line-height: initial;
+    font-size: 10px;
+}
+
