--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,7 @@
 }
 html
 {
+
     scroll-behavior: smooth;
 }
 button:hover,a:hover
@@ -32,8 +33,8 @@ h1,h2,h3,h4,h5,h6
 }
 img
 {
-    max-width: 100%;
-    height: auto;
+    width: 100%;
+    height: auto !important;
     position: relative;
 }
 a
@@ -86,12 +87,77 @@ input:focus,textarea:focus,button[type="reset"]
 {
     font-size: 16px;
 }
-.top a:hover,.post-day a:hover,.blog-info h2:hover>a
+.nav2 li:hover>span i,.nav2 li:hover>a,.top a:hover,.post-day a:hover,.blog-info h2:hover>a,.menu-active
 {
-    color:#ff4229;
+    color:#ff4229 !important;
+}
+.toggle-menu
+    {
+        font-size: 30px;
+        text-align: right;
+        display: none;
+        width: 100%;
+        padding-right: 20px;
+    }
+.toggle-menu span
+{
+    cursor: pointer;
+}
+.nav-reponsive
+{
+    display: none;
+}
+.nav2
+{
+    position: absolute;
+    height: 50vh;
+    width: 40%;
+    top:76px;
+    right:0;
+    display: none;
+}
+.nav2 li
+{
+    background-color: #121416;
+    line-height: 50px;
+    text-align: right;
+    padding-right: 20px;
+}
+.nav2 li a,.nav2 i
+{
+    font-size: 13px;
+    color: white;
+}
+.nav2 li a
+{
+    margin-right: 10px;
+    font-weight: 10;
+}
+.nav2>ul>li>ul>li>ul
+{
+    display:none;
+}
+.nav2>ul>li>ul>li:hover>ul
+{
+    display: block;
+}
+.nav2>ul>li:hover>ul
+{
+    display: block;
+}
+.nav2 ul
+{
+    animation-name: hieu_ung_menu;
+    animation-duration: 1s;
+}
+.nav2 ul>li>ul
+{
+    display: none;
 }
 .top2
 {
+    position: relative;
+    height: 76px;
     background-color: rgba(255, 255,255, 0.9);
     display: flex;
     align-items: center;
@@ -181,22 +247,31 @@ input:focus,textarea:focus,button[type="reset"]
 }
 .logo
 {
-    width: 10%;
+    min-width: 400px;
     padding: 10px 40px 0 20px;
 }
 .nav
 {
-    width: 90%;
+    width: 70%;
+}
+.top2 img
+{
+    width: 30% !important;
+}
+#back-top
+{
+    display: none;
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    z-index: 999;
+    animation: opacity 0.5s ease;
 }
 #back-top a
 {
-    position: fixed;
-    bottom: 12px;
-    right: 24px;
     color: #eee;
     font-size: 50px;
     font-weight: bold;
-    z-index: 9999;
 }
 #back-top a:hover {
     color: rgba(50,50,50,0.8);
