--- a/css/index.css
+++ b/css/index.css
@@ -206,6 +206,73 @@ button
     color:#303033;
     font-weight: 600;
 }
+.overlay
+{
+    position: fixed; 
+  display: none; 
+  width: 100%; 
+  height: 100%; 
+  top: 0; 
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0,0,0,0.5);
+  z-index: 999;
+  cursor: pointer;
+}
+.overlay-on
+{
+    cursor: pointer;
+}
+.overlay-box
+{
+    height: 67%;
+    width: 33%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+.overlay-img
+{
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+.overlay-zoom
+{
+    position: absolute;
+    top: 5%;
+    right: 0%;
+    transform: translate(-50%, -50%);
+    font-size: 30px;
+    z-index: 2000;
+}
+.overlay-text
+{
+    color: #aaa;
+    font-size: 14px;
+    letter-spacing: .5px;
+    text-transform: uppercase; 
+    background-color: white;
+    padding: 10px;
+    position: relative;
+}
+.overlay-text span
+{
+    position: absolute;
+    top: 50%;
+    right: 0;
+    font-size: 26px;
+    transform: translate(-50%,-50%);
+}
+#starters .overlay-img
+{
+    background: url("../img/menu/breadsticks_s.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+}
 #starters .feature-food
 {
     margin:0 !important;
@@ -562,7 +629,7 @@ sup
     text-align: center;
     text-transform: uppercase;
     color: #ffffff;
-    padding-top: 115px;
+    padding-top: 70px;
     font-size: 18px;
     font-weight: 600;
     letter-spacing: 5.2px;
