--- a/css/index.css
+++ b/css/index.css
@@ -611,7 +611,7 @@ sup
 {
     width: 25%;
     margin: 1%;
-    margin-bottom: 100px;
+    margin-bottom: 20px;
 }
 .gallery-item
 {
@@ -737,6 +737,11 @@ sup
     font-weight: 800;
     color: #cacacc;
     margin-top: 20px;
+}
+#team-2
+{
+    display: none;
+    position: relative;
 }
 .team-img
 {
