--- a/css/reponsive.css
+++ b/css/reponsive.css
@@ -103,4 +103,11 @@
     {
     height: 50vh !important;
     }
+    #team
+    {
+        display: none;
+    }
+    #team-2{
+        display: block;
+    }
 }
