--- a/css/slide-show.css
+++ b/css/slide-show.css
@@ -47,7 +47,7 @@
         transform: translate(+50%,-50%);
         
     }
-    .dots
+    .dots,.dots-2
     {
         cursor: pointer;
         height: 20px;
@@ -56,6 +56,7 @@
         background-color: rgb(255,255,255,0.3);
         border-radius: 50%;
         display: inline-block;
+        transition: background-color 0.6s ease;
     }
     .active,.dots:hover
     {
@@ -71,6 +72,23 @@
     .fade
     {
         animation: fade ease-in-out 10s;
+    }
+    #team-2 .dots-2
+    {
+        background-color: rgba(0, 0, 0, 0.3);
+    }
+    #team-2 .active
+    {
+        background-color: rgba(0, 0, 0, 0.8);
+    }
+    .n-fade{
+        animation-name: n-fade;
+    animation-duration: 1.5s;
+    }
+    @keyframes n-fade
+    {
+        from{opacity: 0.4;}
+        to{opacity: 1;}
     }
     @keyframes fade
     {
